tests/test_files_pa3/new/SemanticErrors/LocalVarsNotInitB4Use12.ic
class A
{
	static void main(string[] args) { }
	void a()
	{
		int b;
		int[] c;
		c = new int[b];
	}
}